--- a/test/index.html
+++ b/test/index.html
@@ -1,172 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dating App</title>
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<style>
-  * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Roboto', sans-serif; }
-  body { background: #f8f8f8; display: flex; justify-content: center; align-items: center; height: 100vh; }
-  .app-container { width: 360px; background: #fff; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); overflow: hidden; }
-  .header { padding: 15px; background: #ff4757; color: #fff; text-align: center; font-weight: 700; font-size: 20px; }
-  .form { display: flex; flex-direction: column; padding: 20px; }
-  .form input, .form select { margin-bottom: 15px; padding: 10px; border: 1px solid #ddd; border-radius: 6px; }
-  .form button { padding: 10px; background: #ff4757; color: #fff; border: none; border-radius: 6px; font-weight: 700; cursor: pointer; }
-  .profiles { display: none; flex-direction: column; padding: 15px; }
-  .card { position: relative; background: #fff; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin-bottom: 15px; overflow: hidden; }
-  .card img { width: 100%; height: 250px; object-fit: cover; }
-  .card-info { padding: 10px; display: flex; justify-content: space-between; align-items: center; }
-  .card-info h3 { font-size: 18px; }
-  .online { width: 12px; height: 12px; background: green; border-radius: 50%; display: inline-block; }
-  .chat-popup { display: none; position: fixed; bottom: 20px; right: 20px; width: 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.2); }
-  .chat-header { padding: 10px; background: #ff4757; color: #fff; border-top-left-radius: 10px; border-top-right-radius: 10px; font-weight: 700; }
-  .chat-messages { height: 200px; overflow-y: auto; padding: 10px; border-bottom: 1px solid #ddd; }
-  .chat-input { display: flex; padding: 10px; }
-  .chat-input input { flex: 1; padding: 8px; border: 1px solid #ddd; border-radius: 6px; }
-  .chat-input button { padding: 8px 10px; margin-left: 5px; background: #ff4757; color: #fff; border: none; border-radius: 6px; cursor: pointer; }
-</style>
+  <meta charset="UTF-8">
+  <title>VM Dating App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; }
+    header { background:#ff4081; color:#fff; padding:10px 20px; text-align:center; font-size:1.5em; }
+    #login, #signup, #profiles { max-width: 400px; margin: 20px auto; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+    input, select, button { width:100%; padding:10px; margin:8px 0; border-radius:5px; border:1px solid #ccc; }
+    button { background:#ff4081; color:#fff; border:none; cursor:pointer; }
+    button:hover { background:#e73370; }
+    .profile-grid { display:grid; grid-template-columns:repeat(3, 1fr); gap:10px; }
+    .profile-card { position:relative; border-radius:10px; overflow:hidden; cursor:pointer; border:1px solid #ddd; }
+    .profile-card img { width:100%; height:120px; object-fit:cover; }
+    .online-dot { position:absolute; top:5px; right:5px; width:15px; height:15px; border-radius:50%; background:green; border:2px solid #fff; }
+    #chatPopup { display:none; position:fixed; bottom:10px; right:10px; width:300px; max-height:400px; background:#fff; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.2); overflow:hidden; flex-direction:column; }
+    #chatMessages { flex:1; padding:10px; overflow-y:auto; }
+    #chatInput { display:flex; }
+    #chatInput input { flex:1; border-radius:0; border-right:none; }
+    #chatInput button { border-radius:0; }
+  </style>
 </head>
 <body>
 
-<div class="app-container">
-  <div class="header">Dating App</div>
-  
-  <!-- Registration/Login Form -->
-  <div class="form" id="loginForm">
-    <input type="text" id="name" placeholder="Your Name" required>
-    <input type="number" id="age" placeholder="Age" required>
-    <select id="gender" required>
-      <option value="">Select Gender</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-    </select>
-    <input type="file" id="profileImage" accept="image/*" required>
-    <button onclick="registerUser()">Start</button>
-  </div>
+<header>VM Dating App</header>
 
-  <!-- Profiles Display -->
-  <div class="profiles" id="profilesContainer"></div>
+<div id="signup">
+  <h3>Sign Up</h3>
+  <input type="text" id="signupName" placeholder="Name">
+  <input type="number" id="signupAge" placeholder="Age">
+  <select id="signupGender">
+    <option value="" disabled selected>Gender</option>
+    <option value="Male">Male</option>
+    <option value="Female">Female</option>
+    <option value="Other">Other</option>
+  </select>
+  <input type="file" id="signupImage" accept="image/*">
+  <input type="email" id="signupEmail" placeholder="Email">
+  <input type="password" id="signupPassword" placeholder="Password">
+  <button onclick="signUp()">Sign Up</button>
+  <p>Already have account? <a href="#" onclick="toggleForms('login')">Login</a></p>
+</div>
+
+<div id="login" style="display:none;">
+  <h3>Login</h3>
+  <input type="email" id="loginEmail" placeholder="Email">
+  <input type="password" id="loginPassword" placeholder="Password">
+  <button onclick="login()">Login</button>
+  <p>No account? <a href="#" onclick="toggleForms('signup')">Sign Up</a></p>
+</div>
+
+<div id="profiles" style="display:none;">
+  <h3>Browse Profiles</h3>
+  <div class="profile-grid" id="profileGrid"></div>
 </div>
 
 <!-- Chat Popup -->
-<div class="chat-popup" id="chatPopup">
-  <div class="chat-header" id="chatHeader">Chat</div>
-  <div class="chat-messages" id="chatMessages"></div>
-  <div class="chat-input">
-    <input type="text" id="chatInput" placeholder="Type a message...">
+<div id="chatPopup">
+  <div id="chatMessages"></div>
+  <div id="chatInput">
+    <input type="text" id="chatText" placeholder="Type a message...">
     <button onclick="sendMessage()">Send</button>
   </div>
 </div>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
-
 <script>
-  // Firebase Config
+  // Firebase config
   const firebaseConfig = {
-    apiKey: "AIzaSyAlWP5D79PsX29H0hIZlfvL0YV5Us7v5I4",
-    authDomain: "sample-firebase-ai-app-1f408.firebaseapp.com",
-    databaseURL: "https://sample-firebase-ai-app-1f408-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "sample-firebase-ai-app-1f408",
-    storageBucket: "sample-firebase-ai-app-1f408.firebasestorage.app",
-    messagingSenderId: "657942233322",
-    appId: "1:657942233322:web:a8dd9896ca8cfccdbb5793"
+    apiKey: "AIzaSyDIzeINHRm-0jAfbsB0-7flr5sOasaEEy4",
+    authDomain: "vmdatting.firebaseapp.com",
+    projectId: "vmdatting",
+    storageBucket: "vmdatting.firebasestorage.app",
+    messagingSenderId: "876437607489",
+    appId: "1:876437607489:web:46ad641659f621618562c0",
+    measurementId: "G-XH9LHSPWYM"
   };
   firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
   const db = firebase.database();
   const storage = firebase.storage();
 
-  let currentUser = null;
+  let currentUserId = null;
+  let chatWithId = null;
 
-  // Register User
-  async function registerUser() {
-    const name = document.getElementById('name').value;
-    const age = document.getElementById('age').value;
-    const gender = document.getElementById('gender').value;
-    const file = document.getElementById('profileImage').files[0];
-
-    if(!name || !age || !gender || !file) { alert('All fields are required!'); return; }
-
-    // Upload Image
-    const storageRef = storage.ref('profiles/' + file.name);
-    await storageRef.put(file);
-    const imageUrl = await storageRef.getDownloadURL();
-
-    // Save User in Firebase
-    const userId = Date.now();
-    const userData = { id: userId, name, age, gender, imageUrl, online: true };
-    db.ref('users/' + userId).set(userData);
-
-    currentUser = userData;
-
-    document.getElementById('loginForm').style.display = 'none';
-    loadProfiles();
+  function toggleForms(form) {
+    document.getElementById('signup').style.display = form==='signup'?'block':'none';
+    document.getElementById('login').style.display = form==='login'?'block':'none';
   }
 
-  // Load Profiles
-  function loadProfiles() {
-    const container = document.getElementById('profilesContainer');
-    container.style.display = 'flex';
-    db.ref('users').once('value', snapshot => {
-      container.innerHTML = '';
-      snapshot.forEach(child => {
-        const user = child.val();
-        if(user.id !== currentUser.id){
-          const card = document.createElement('div');
-          card.className = 'card';
-          card.innerHTML = `
-            <img src="${user.imageUrl}" alt="${user.name}">
-            <div class="card-info">
-              <h3>${user.name}, ${user.age}</h3>
-              <span class="online"></span>
-            </div>
-          `;
-          card.onclick = () => openChat(user);
-          container.appendChild(card);
-        }
+  async function signUp() {
+    const name = document.getElementById('signupName').value;
+    const age = parseInt(document.getElementById('signupAge').value);
+    const gender = document.getElementById('signupGender').value;
+    const email = document.getElementById('signupEmail').value;
+    const password = document.getElementById('signupPassword').value;
+    const file = document.getElementById('signupImage').files[0];
+
+    if (!name || !age || !gender || !email || !password || !file) { alert("Fill all fields"); return; }
+    if (age < 18) { alert("You must be 18+ to join"); return; }
+
+    try {
+      const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+      currentUserId = userCredential.user.uid;
+
+      const imageRef = storage.ref('profiles/' + currentUserId + '/' + file.name);
+      await imageRef.put(file);
+      const imageUrl = await imageRef.getDownloadURL();
+
+      db.ref('users/' + currentUserId).set({
+        name, age, gender, imageUrl, online:true
       });
+
+      document.getElementById('signup').style.display = 'none';
+      loadProfiles();
+    } catch (error) {
+      alert(error.message);
+    }
+  }
+
+  async function login() {
+    const email = document.getElementById('loginEmail').value;
+    const password = document.getElementById('loginPassword').value;
+    try {
+      const userCredential = await auth.signInWithEmailAndPassword(email, password);
+      currentUserId = userCredential.user.uid;
+      db.ref('users/' + currentUserId).update({online:true});
+      document.getElementById('login').style.display = 'none';
+      loadProfiles();
+    } catch (error) { alert(error.message); }
+  }
+
+  function loadProfiles() {
+    document.getElementById('profiles').style.display='block';
+    db.ref('users').on('value', snapshot => {
+      const profiles = snapshot.val();
+      const grid = document.getElementById('profileGrid');
+      grid.innerHTML='';
+      for (let uid in profiles) {
+        if (uid === currentUserId) continue;
+        const p = profiles[uid];
+        if (!p.age || p.age < 18) continue; // auto remove underage
+        const card = document.createElement('div'); card.className='profile-card';
+        card.innerHTML = `<img src="${p.imageUrl}" alt="${p.name}"><div class="online-dot" style="background:${p.online?'green':'gray'}"></div>`;
+        card.onclick = () => openChat(uid, p.name);
+        grid.appendChild(card);
+      }
     });
   }
 
-  // Chat Functions
-  let chatUser = null;
-  function openChat(user){
-    chatUser = user;
-    document.getElementById('chatPopup').style.display = 'block';
-    document.getElementById('chatHeader').innerText = 'Chat with ' + user.name;
-    loadMessages();
-  }
-
-  function loadMessages() {
-    const chatMessages = document.getElementById('chatMessages');
-    db.ref('messages').orderByChild('chatId').equalTo(getChatId()).on('value', snapshot => {
-      chatMessages.innerHTML = '';
-      snapshot.forEach(child => {
-        const msg = child.val();
-        const div = document.createElement('div');
-        div.style.marginBottom = '8px';
-        div.innerHTML = `<strong>${msg.sender === currentUser.id ? 'You' : chatUser.name}:</strong> ${msg.text}`;
-        chatMessages.appendChild(div);
-        chatMessages.scrollTop = chatMessages.scrollHeight;
-      });
+  function openChat(uid, name) {
+    chatWithId = uid;
+    document.getElementById('chatPopup').style.display='flex';
+    const chatRef = db.ref('chats/' + [currentUserId, uid].sort().join('_'));
+    chatRef.on('value', snap => {
+      const msgs = snap.val() || {};
+      const chatMessages = document.getElementById('chatMessages');
+      chatMessages.innerHTML='';
+      for (let k in msgs) {
+        const m = document.createElement('div');
+        m.textContent = `${msgs[k].sender === currentUserId?'Me':name}: ${msgs[k].text}`;
+        chatMessages.appendChild(m);
+      }
+      chatMessages.scrollTop = chatMessages.scrollHeight;
     });
   }
 
   function sendMessage() {
-    const input = document.getElementById('chatInput');
-    if(!input.value) return;
-    const msg = { chatId: getChatId(), sender: currentUser.id, text: input.value };
-    db.ref('messages').push(msg);
-    input.value = '';
+    const text = document.getElementById('chatText').value;
+    if (!text || !chatWithId) return;
+    const chatRef = db.ref('chats/' + [currentUserId, chatWithId].sort().join('_'));
+    chatRef.push({sender:currentUserId, text});
+    document.getElementById('chatText').value='';
   }
 
-  function getChatId() {
-    return currentUser.id < chatUser.id ? currentUser.id + '_' + chatUser.id : chatUser.id + '_' + currentUser.id;
-  }
+  // Set offline on disconnect
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      currentUserId = user.uid;
+      db.ref('users/' + currentUserId).onDisconnect().update({online:false});
+      loadProfiles();
+    }
+  });
 </script>
+
 </body>
 </html>
